--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "postcss": "^8.4.39",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.8"
   },
