--- a/config/database.yml
+++ b/config/database.yml
@@ -81,7 +81,7 @@ test:
 #
 production:
   <<: *default
-  database: badminton_app_production
+  database: <%= ENV["RDS_DBNAME"] || 'badminton_app_production'%>
   username: <%= ENV["RDS_USERNAME"] %>
   password: <%= ENV["RDS_PASSWORD"] %>
   host: <%= ENV["RDS_HOSTNAME"] %>
