--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "esbuild": "^0.23.0",
+    "esbuild-rails": "^1.0.7",
     "i18next": "^23.16.4",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.39",
