start solving issue 12

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+DB_NAME=badminton_app_dev
+DB_USER=postgres
+DB_PASSWORD=ruby
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
