--- a/config/database.yml
+++ b/config/database.yml
@@ -20,28 +20,31 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  host: localhost
 
 development:
   <<: *default
-  database: badminton_app_dev
+  database: <%= ENV['DB_NAME'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: <%= ENV["DB_USER"] || 'postgres' %>
+  #username: <%= ENV["DB_USER"] || 'postgres' %>
 
   # The password associated with the postgres role (username).
-  password: <%= ENV["DB_PASSWORD"] || 'mars1115' %>
+  #password: <%= ENV["DB_PASSWORD"] || 'mars1115' %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: <%= ENV["DB_HOSTNAME"] || 'localhost' %>
+  #host: <%= ENV["DB_HOSTNAME"] || 'localhost' %>
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  #port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -52,6 +55,7 @@ development:
   # Defaults to warning.
   #min_messages: notice
   socket: /usr/local/var/run/postgresql/.s.PGSQL.5432
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -81,8 +85,8 @@ test:
 #
 production:
   <<: *default
-  database: <%= ENV["RDS_DBNAME"] || 'badminton_app_production'%>
-  username: <%= ENV["RDS_USERNAME"] %>
-  password: <%= ENV["RDS_PASSWORD"] %>
-  host: <%= ENV["RDS_HOSTNAME"] %>
-  port: <%= ENV.fetch("RDS_PORT", 5432) %>
+  database: badminton_app_production
+  #username: <%= ENV["RDS_USERNAME"] %>
+  #password: <%= ENV["RDS_PASSWORD"] %>
+  #host: <%= ENV["RDS_HOSTNAME"] %>
+  #port: <%= ENV.fetch("RDS_PORT", 5432) %>
