--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,15 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV["DB_USER"] || 'postgres' %>
+
+  # The password associated with the postgres role (username).
+  password: <%= ENV["DB_PASSWORD"] || 'postgres' %>
+  host: <%= ENV["DB_HOSTNAME"] || 'localhost' %>
+
+  # The TCP port the server listens on. Defaults to 5432.
+  # If your server runs on a different port number, change accordingly.
+  port: 5432
 
 development:
   <<: *default
@@ -32,7 +41,7 @@ development:
   username: <%= ENV["DB_USER"] || 'postgres' %>
 
   # The password associated with the postgres role (username).
-  password: <%= ENV["DB_PASSWORD"] || 'mars1115' %>
+  password: <%= ENV["DB_PASSWORD"] || 'postgres' %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
